:lipstick: Updating the UI and style files.

--- a/resources/css/common.less
+++ b/resources/css/common.less
@@ -36,14 +36,14 @@ progress::-webkit-progress-value {
 }
 
 // 我的图片
-#albums-grid, #photos-grid {
+#photos-grid {
     a:hover, a.selected {
         outline-color: #3b82f6;
-        .album-select, .photo-select {
+        .photo-select {
             display: block;
         }
         &.selected {
-            .album-select, .photo-select {
+            .photo-select {
                 border-color: white;
                 &>i {
                     color: #0061ff;
