--- a/resources/css/common.less
+++ b/resources/css/common.less
@@ -9,6 +9,22 @@
     scrollbar-width: none; /* Firefox */
 }
 
+// 滚动条样式
+::-webkit-scrollbar {
+    width: 6px;
+    height: 100%;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 6px;
+    background: #cad3e2;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 6px;
+    background: rgb(255, 255, 255);
+}
+
 progress::-webkit-progress-bar {
     background-color: #d7d7d7;
 }
@@ -18,15 +34,17 @@ progress::-webkit-progress-value {
 }
 
 #toast-container {
-    &>div {
+    & > div {
         font-size: 13px;
         padding: 10px 10px 10px 50px;
         box-shadow: 0 0 12px rgba(183, 183, 183, 0.47);
+
         &:hover {
             box-shadow: 0 0 12px rgba(161, 161, 161, 0.47);
         }
     }
 }
+
 .toast-close-button {
     right: -0.15em;
 }
@@ -39,13 +57,16 @@ progress::-webkit-progress-value {
 #photos-grid {
     a:hover, a.selected {
         outline-color: #3b82f6;
+
         .photo-select {
             display: block;
         }
+
         &.selected {
             .photo-select {
                 border-color: white;
-                &>i {
+
+                & > i {
                     color: #0061ff;
                 }
             }
