--- a/resources/css/common.less
+++ b/resources/css/common.less
@@ -59,11 +59,12 @@ progress::-webkit-progress-value {
     display: flex;
     justify-content: center;
     justify-items: center;
-    padding: 1rem 0;
-    a {
+    padding: 3rem 0;
+    span {
         display: inline-flex;
         color: #626262;
         font-size: .9em;
+        cursor: pointer;
         &.disabled {
             cursor: not-allowed;
             color: grey;
